--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 :root {
   --bg-color: #21252b;
   --primary: #bfc0bc;
+  --border-color: #bfc0bc91;
   --bg-dark: #1e2127;
   --secondary: #eeeeee;
   --heading: #D65A31;
@@ -36,14 +37,32 @@ section {
   padding: 0 150px 0 150px;
 }
 
+p {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  letter-spacing: 1px;
+}
 .page-background-num {
   font-size: 28em;
   font-weight: 900;
   font-family: "Teko", sans-serif;
   color: var(--bg-dark);
   position: absolute;
+  z-index: -1;
+}
+
+.home .page-background-num {
   bottom: 10%;
   right: 10%;
+}
+.about .page-background-num {
+  bottom: 10%;
+  left: 40%;
+}
+
+.contact .page-background-num {
+  bottom: 10%;
+  left: 20%;
 }
 
 .icons-home {
@@ -131,7 +150,7 @@ svg line {
 
 .section-header {
   font-size: 40px;
-  padding-bottom: 15px;
+  margin-bottom: 35px;
   width: fit-content;
   position: relative;
 }
@@ -141,7 +160,7 @@ svg line {
   position: absolute;
   top: 45%;
   left: 120%;
-  width: 150%;
+  width: 100%;
   height: 1px;
   background: var(--primary);
   opacity: 0.7;
@@ -220,10 +239,7 @@ nav .logo {
 
 /* ******************************************** home start */
 
-.about .page-background-num {
-  bottom: 0%;
-  left: 20%;
-}
+
 .about .section-content {
   display: flex;
 }
@@ -242,8 +258,8 @@ nav .logo {
   left: 5%;
   width: 100%;
   height: 100%;
-  border: 1px solid var(--secondary);
-  opacity: 0.5;
+  border: 1px solid var(--border-color);
+
   z-index: -1;
 }
 
@@ -271,5 +287,172 @@ nav .logo {
 }
 
 
+/* ******************************************** contact start */
+
+.contact .section-content {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.contact-text-and-info {
+  max-width: 400px;
+}
 
 
+.contact-text-and-info p {
+  margin-bottom: 30px;
+}
+.contact-text-and-info div h3 {
+  color: var(--secondary);
+  margin: 10px 0;
+}
+
+.contact-form {
+  width: 50%;
+  background: var(--bg-dark);
+  padding: 30px 40px;
+  -webkit-box-shadow: 10px 10px 11px -2px rgba(0,0,0,0.35);
+-moz-box-shadow: 10px 10px 11px -2px rgba(0,0,0,0.35);
+box-shadow: 10px 10px 11px -2px rgba(0,0,0,0.35);
+}
+
+.contact-form h2 {
+  margin-bottom: 20px;
+}
+input,
+textarea {
+  width: 100%;
+  min-height: 35px;
+  background: var(--bg-dark);
+  outline: none;
+  border: none;
+  border-bottom: 1px solid var(--border-color);
+  margin: 10px 0;
+  color: var(--primary);
+  font-size: 18px;
+}
+
+
+form {
+  position: relative;
+}
+form input:last-child {
+  margin: 0 auto;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 20px;
+  background: var(--bg-dark);
+  color: var(--secondary);
+  border: none;
+  filter: contrast(70%);
+  width: unset;
+  padding: 15px 100px;
+  font-size: 18px;
+  letter-spacing: 2px;
+}
+
+form input:last-child:hover {
+  filter: contrast(80%)
+}
+
+
+label {
+  color: var(--primary);
+  display: block;
+  position: absolute;
+  left: 10px;
+  -webkit-transform: translate(0px, -35px) scale(1.2);
+  -ms-transform: translate(0px, -35px) scale(1.2);
+  transform: translate(0px, -35px) scale(1.2);
+  transition: 0.5s;
+}
+
+#label-message {
+  color: var(--primary);
+  display: block;
+  position: absolute;
+  left: 10px;
+  -webkit-transform: translate(0px, -230px) scale(1.2);
+  -ms-transform: translate(0px, -230px) scale(1.2);
+  transform: translate(0px, -230px) scale(1.2);
+  transition: 0.5s;
+}
+
+#input-name:focus,
+#input-name:not(:placeholder-shown)  {
+  border-bottom: 1px solid var(--heading);
+}
+
+#input-name:not(:placeholder-shown) ~ #label-name,
+#input-name:focus ~ #label-name {
+  -webkit-transform: translate(-5px, -60px) scale(1);
+  -ms-transform: translate(-5px, -60px) scale(1);
+  transform: translate(-5px, -60px) scale(1);
+  color: var(--heading);
+}
+
+#input-email:focus,
+#input-email:not(:placeholder-shown) {
+  border-bottom: 1px solid var(--heading);
+}
+
+#input-email:not(:placeholder-shown) ~ #label-email,
+#input-email:focus ~ #label-email {
+  -webkit-transform: translate(-5px, -60px) scale(1);
+  -ms-transform: translate(-5px, -60px) scale(1);
+  transform: translate(-5px, -60px) scale(1);
+  color: var(--heading);
+}
+
+textarea:focus {
+  border-bottom: 1px solid var(--heading);
+}
+
+textarea:not(:placeholder-shown) ~ #label-message,
+textarea:focus ~ #label-message {
+  -webkit-transform: translate(-5px, -253px) scale(1);
+  -ms-transform: translate(-5px, -253px) scale(1);
+  transform: translate(-5px, -253px) scale(1);
+  color: var(--heading);
+}
+
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: none;
+  -webkit-text-fill-color: var(--primary);
+  -webkit-box-shadow: 0 0 0px 1000px var(--bg-dark) inset;
+  box-shadow: 0 0 0px 1000px var(--bg-dark) inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+
+/* *********************************************** media query */
+
+
+@media(max-width: 800px) {
+    section {
+    padding: 0 80px 0 80px;
+  }
+  .intro {
+    font-family: 'Montserrat', sans-serif;
+    max-width: 550px;
+    margin: 120px 0 0 0px;
+  }
+  .intro h1 {
+    font-size: 50px;
+    width: fit-content;
+    color: var(--secondary);
+  }
+
+  .intro h2 {
+    font-size: 30px;
+    padding-bottom: 15px;
+  }
+}
