--- a/style.css
+++ b/style.css
@@ -31,9 +31,11 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+section:nth-child(1) {
+  min-height: 100vh;
+}
 section {
   position: relative;
-  min-height: 100vh;
   padding: 0 150px 100px 150px;
   max-width: 1400px;
   margin: 0 auto;
@@ -56,19 +58,19 @@ p {
 }
 
 .home .page-background-num {
-  bottom: 10%;
+  bottom: 30%;
   right: 10%;
 }
 .about .page-background-num {
-  bottom: 10%;
+  bottom: 30%;
   left: 40%;
 }
 .projects .page-background-num {
-  bottom: 0;
+  bottom: 10%;
   right: 10%;
 }
 .contact .page-background-num {
-  bottom: 10%;
+  bottom: 50%;
   left: 20%;
 }
 
@@ -315,7 +317,7 @@ nav ul li a:hover {
   width: 250px;
 }
 
-.profile-img:before {
+.profile-img .profile-img-border {
   content: '';
   position: absolute;
   bottom: -4%;
@@ -326,6 +328,47 @@ nav ul li a:hover {
   z-index: -1;
 }
 
+
+.profile-img-border svg {
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  width: calc(100% + 3px);
+  height: calc(100% + 3px);
+  fill: transparent;
+}
+.profile-img-border svg rect {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  fill: transparent;
+}
+
+
+.profile-img-border svg rect {
+  stroke: var(--heading);
+  stroke-width: 6;
+  transition: 500ms;
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1125;
+}
+
+.profile-img:hover .profile-img-border svg rect {
+  
+  animation: anim 300ms linear forwards;
+  
+}
+
+@keyframes anim {
+  100% {
+    stroke: var(--heading);
+    stroke-dasharray:  295;
+    stroke-dashoffset: 805;
+    /* stroke-dashoffset: 25; */
+  }
+}
 .about-text-and-tech {
   margin-right: 50px;
 }
@@ -360,6 +403,7 @@ nav ul li a:hover {
 
 .contact-text-and-info {
   max-width: 400px;
+  width: 50%;
 }
 
 .contact-text-and-info p {
@@ -377,6 +421,7 @@ nav ul li a:hover {
   -webkit-box-shadow: 10px 10px 11px -2px rgba(0,0,0,0.35);
   -moz-box-shadow: 10px 10px 11px -2px rgba(0,0,0,0.35);
   box-shadow: 10px 10px 11px -2px rgba(0,0,0,0.35);
+  max-width: 500px;
 }
 
 .contact-form h2 {
@@ -511,6 +556,7 @@ select:-webkit-autofill:focus {
 .project img {
   width: 100%;
   height: 80%;
+  opacity: 1;
 }
 
 .project-modul {
@@ -554,7 +600,6 @@ select:-webkit-autofill:focus {
 
 button svg {
   pointer-events: none;
-
 }
 
 .modul-close-button line {
@@ -569,6 +614,15 @@ button svg {
   align-self: center;
 }
 
+.title-and-tech {
+
+}
+
+.fake-title {
+  width: 0;
+  height: 0;
+  display: none;
+}
 
 .inner {
   width: 300%;
@@ -699,13 +753,13 @@ button svg {
   z-index: 1;
 }
 
-.project-modul-info .tech-used {
+.tech-used {
   margin: 10px 0 20px 0;
   display: flex;
   flex-wrap: wrap;
 }
 
-.project-modul-info .tech-used p {
+.tech-used p {
   font-size: 15px;
   border: 1px solid var(--border-color);
   border-radius: 4px;
@@ -771,13 +825,9 @@ button svg {
 /* *********************************************** media query */
 @media(max-width: 1050px) {
   section {
-    padding: 0 80px 0 80px;
+    padding: 0 80px 100px 80px;
   }
-    .contact .section-content {
-    display: flex;
-    flex-direction: column;
-    align-content: flex-end;
-  }
+
   .contact-text-and-info {
     margin: 0 auto;
   }
@@ -793,6 +843,11 @@ button svg {
 }
 
 @media(max-width: 800px) {
+  .contact .section-content {
+    display: flex;
+    flex-direction: column;
+    align-content: flex-end;
+  }
   .menu-button {
     display: block;
   }
@@ -818,7 +873,7 @@ button svg {
   nav ul {
     text-align: center;
   }
-    section {
+  section {
     padding: 0 80px 0 80px;
   }
   .section-header {
@@ -827,6 +882,7 @@ button svg {
   .section-header:before {
     left: 110%;
     width: 90%;
+    max-width: 110px;
   }
   .intro {
     font-family: 'Montserrat', sans-serif;
@@ -837,14 +893,42 @@ button svg {
   }
   .intro h1 {
     font-size: 50px;
-    width: fit-content;
+    /* width: fit-content; */
     color: var(--secondary);
   }
-
   .intro h2 {
     font-size: 30px;
     padding-bottom: 15px;
     margin: 5px 0 15px 0;
+  }
+
+  .page-navigation {
+    right: 10px;
+  }
+  .icons-home {
+    left: 10px;
+  }
+
+  .project-modul {
+    flex-direction: column;
+    padding-left: 0;
+    /* padding-top: 50px; */
+    max-width: 454px;
+  }
+
+  .project-modul-info {
+    position: relative;
+    height: fit-content;
+  }
+  .modul-title {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+  }
+  .inner {
+    width: 300%;
+    height: 300px;
+    transform: translateX(-350px);
   }
   .about .section-content {
     flex-direction: column-reverse;
@@ -855,12 +939,55 @@ button svg {
     margin: 30px 0;
   }
 
+  .contact-text-and-info,
+  .contact-form {
+    width: 100%;
+    max-width: 490px;
+    padding: 30px 5%;
+  }
+  
+  .home .page-background-num {
+    bottom: 10%;
+    right: 10%;
+  }
+  .about .page-background-num {
+    bottom: 30%;
+    left: 15%;
+  }
+  .projects .page-background-num {
+    bottom: unset;
+    top: 20%;
+    right: 10%;
+  }
+  .contact .page-background-num {
+    bottom: 50%;
+    left: 15%;
+  }
+  .fake-title {
+    display: block;
+    width: unset;
+    height: unset;
+    position: relative;
+    text-transform: uppercase;
+    margin: 10px 25px;
+  }
+  .tech-used {
+    margin: 0 0 20px 0;
+  }
+  #modul-title {
+    display: none;
+  }
+
+    #modul-description {
+    text-align: start;
+    margin-bottom: 30px;
+  }
 }
 
 
 @media(max-width: 500px) {
   section {
-    padding: 0 60px 0 60px;
+    padding: 0 45px 0 45px;
   }
   .section-header {
     font-size: 30px;
@@ -869,24 +996,65 @@ button svg {
     left: 10%;
     width: 80%;
     top: 105%;
-
+  }
+  
+  .page-navigation {
+    right: 5px;
+  }
+  .icons-home {
+    left: 5px;
+  }
+  .project-modul {
+    max-width: 95%;
+  }
+  .carousel {
+    /* margin: 35px 25px 25px 25px; */
+    width: 330px;
+    height: 270px;
+  }
+  .project-modul-info {
+    width: 100%
+  }
+  .inner {
+    width: 300%;
+    height: 300px;
+    transform: translateX(-350px);
+  }
+  .project {
+    width: 90%;
+    max-width: 260px;
+    height: 240px;
   }
   .intro {
     padding: 0 60px 0 60px;
   }
   .intro h1 {
     font-size: 30px;
-    width: fit-content;
+    /* width: fit-content; */
+    margin: 0 auto;
+    left: unset;
+    text-align: center;
   }
   .intro h2 {
     font-size: 28px;
     padding-bottom: 15px;
+    text-align: center;
   }
   p {
-    font-size: 16px;
+    font-size: 18px;
     line-height: 20px;
+    text-align: center;
   }
 
+  .tech-list p {
+    margin: 5px auto;
+  }
+  .contact-text-and-info {
+    padding: 20px 0;
+  }
+  .contact-text-and-info p {
+    text-align: start;
+  }
   .home .page-background-num {
     bottom: 30%;
     right: 10%;
@@ -894,8 +1062,64 @@ button svg {
   .profile-img {
     width: 250px;
   }
+  .contact-form {
+    padding: 20px 5%;
+  }
+  .tech-list p {
+    padding: 2px 5px;
+  }
+  .home .page-background-num {
+    bottom: 20%;
+    right: unset;
+    left: 50%;
+    transform: translateX(-50%);
+    
+  }
+  .about .page-background-num {
+    bottom: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .projects .page-background-num {
+    bottom: unset;
+    top: 20%;
+    right: unset;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .contact .page-background-num {
+    top: 30%;
+    bottom: unset;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 
 }
 
+@media(max-width: 370px) {
+  section {
+    padding: 0 35px 0 35px;
+  }
+  .project {
+    width: 220px;
+  }
+  body {
+    overflow-x: hidden;
+  }
+  .profile-img {
+    width: 230px;
+  }
+  .profile-img img {
+    width: 100%;
+  }
+  .project-modul {
+    max-width: calc(100% - 4px);
+    width: 100%;
+  }
+  .carousel {
+    width: 300px;
+    height: 260px
+  }
+}
 
 /* link button on hover dont work */
