--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Teko:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@400;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;1,400;1,800&display=swap');
-
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700;800&display=swap'); */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
 :root {
   --bg-color: #21252b;
   --primary: #bfc0bc;
@@ -16,6 +19,7 @@
   --heading: #D65A31;
   --scrollbar: #858585;
   --scrollbar-track: #4b4a4a;
+  --menu-color: #131416;
 }
 
 [ligth-theme="light"] {
@@ -31,9 +35,6 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-section:nth-child(1) {
-  min-height: 100vh;
-}
 section {
   position: relative;
   padding: 0 150px 100px 150px;
@@ -41,6 +42,15 @@ section {
   margin: 0 auto;
 }
 
+
+section:nth-child(1) {
+  min-height: 100vh;
+  padding-top: 0;
+}
+
+section:nth-child(2) {
+  /* padding-top: 200px; */
+}
 p {
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
@@ -48,13 +58,14 @@ p {
 }
 .page-background-num {
   font-size: 28em;
-  font-weight: 900;
+  font-weight: 600;
   max-width: 350px;
   max-height: 400px;
   font-family: "Teko", sans-serif;
   color: var(--bg-dark);
   position: absolute;
   z-index: -1;
+  user-select: none;
 }
 
 .home .page-background-num {
@@ -78,7 +89,7 @@ p {
   display: flex;
   flex-direction: column;
   position: fixed;
-  bottom: 50px;
+  bottom: 110px;
   left: 20px;
   z-index: 2;
 }
@@ -116,12 +127,25 @@ p {
 .icons-home::before {
   content: "";
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 11px;
-  height: 150px;
+  height: 100px;
   width: 2px;
   background: var(--primary);
-  transform: translateY(-110%);
+  transform: translateY(110%);
+}
+.icons-home a:nth-child(1) {
+  animation-delay: 1100ms;
+} 
+.icons-home a:nth-child(2) {
+  animation-delay: 1200ms;
+}
+
+.icons-home button:nth-child(3) {
+  animation-delay: 1300ms;
+}
+.icons-home button:nth-child(5) {
+  animation-delay: 1400ms;
 }
 
 .pop-up {
@@ -162,25 +186,36 @@ p {
   z-index: 2;
 }
 
-.page-navigation button { 
-  margin: 30px 0;
-  width: fit-content;
-  height: fit-content;
-  background: transparent;
-  outline: none;
-  border: none;
-  cursor: pointer;
+.page-navigation a { 
+  width: 24px;
+  height: 24px;
   transition: all 0.3s;
+  position: absolute;
+  left: -1px;
+}
+
+#page-link1 {
+  top: -27px;
+}
+
+#page-link2 {
+  bottom: -30px;
+}
+
+.disable-link {
+  opacity: 0.3 !important;
+  pointer-events: none;
+  cursor: normal;
 }
 
 
-.page-navigation:hover button:first-child {
+.page-navigation:hover a:first-child {
   transform: translateY(-5px);
 }
-.page-navigation:hover button:last-child {
+.page-navigation:hover a:last-child {
   transform: translateY(5px);
 }
-.page-navigation:hover button svg polyline {
+.page-navigation:hover a svg polyline {
   transition: 0.3s;
   stroke: var(--heading);
 }
@@ -189,6 +224,7 @@ svg polyline {
   fill: none;
   stroke: var(--secondary);
   stroke-width: 2;
+  transition: 300ms;
 }
 svg line {
   width: 24px;
@@ -196,11 +232,30 @@ svg line {
   stroke-width: 1;
 }
 
+.page-navigation-line-animation {
+  animation: page-nav-line-anim 500ms ease-in-out forwards;
+}
+
+@keyframes page-nav-line-anim {
+  50% {
+    stroke: var(--primary);
+    stroke-width: 2;
+  }
+  100% {
+    stroke: var(--secondary);
+    stroke-width: 2;
+  }
+}
+
 .page-num {
+  width: 24px;
+  height: 29px;
   font-family: 'Teko', sans-serif;
   font-size: 20px;
   letter-spacing: 1px;
   padding: 0px 3px 0px 3px;
+  cursor: default;
+  user-select: none;
 }
 
 
@@ -216,7 +271,8 @@ svg line {
 .section-header:before {
   content: '';
   position: absolute;
-  top: 45%;
+  top: 50%;
+  transform: translateY(-100%);
   left: 120%;
   width: 100%;
   height: 1px;
@@ -228,7 +284,7 @@ svg line {
 /* ******************************************** home start */
 
 .menu-button {
-  position: absolute;
+  position: fixed;
   z-index: 4;
   right: 35px;
   top: 35px;
@@ -285,6 +341,21 @@ nav ul li {
   list-style: none;
 }
 
+nav ul li:nth-child(1) {
+  animation-delay: 300ms;
+}
+nav ul li:nth-child(2) {
+  animation-delay: 400ms;
+}
+nav ul li:nth-child(3) {
+  animation-delay: 500ms;
+}
+nav ul li:nth-child(4) {
+  animation-delay: 600ms;
+}
+nav ul li:nth-child(5) {
+  animation-delay: 700ms;
+}
 
 nav ul li a {
   text-decoration: none;
@@ -327,7 +398,7 @@ nav ul li a:hover {
   position: absolute;
   top: 50%;
   left: 10%;
-  transform: translateY(-100%);
+  transform: translateY(-40%);
   font-family: 'Montserrat', sans-serif;
   max-width: 604px;
   /* margin: 250px 0 0 0px; */
@@ -335,14 +406,20 @@ nav ul li a:hover {
 .intro h1 {
   font-size: 60px;
   width: fit-content;
+  animation-delay: 800ms;
 }
 
 .intro h2 {
   font-size: 40px;
   margin: 0px 0 50px 0;
+  animation-delay: 900ms;
 }
 
-/* ******************************************** home start */
+.intro p {
+  animation-delay: 1000ms;
+}
+
+/* ******************************************** abbout start */
 
 .about .section-content {
   display: flex;
@@ -362,8 +439,8 @@ nav ul li a:hover {
 .profile-img .profile-img-border {
   content: '';
   position: absolute;
-  bottom: -4%;
-  left: 5%;
+  bottom: -6px;
+  left: 10px;
   width: 100%;
   height: 100%;
   border: 1px solid var(--border-color);
@@ -375,8 +452,8 @@ nav ul li a:hover {
   position: absolute;
   top: -1px;
   left: -1px;
-  width: calc(100% + 3px);
-  height: calc(100% + 3px);
+  width: 251px;
+  height: 274px;
   fill: transparent;
 }
 .profile-img-border svg rect {
@@ -392,7 +469,6 @@ nav ul li a:hover {
 .profile-img-border svg rect {
   stroke: var(--heading);
   stroke-width: 6;
-  transition: 500ms;
   stroke-dasharray: 600;
   stroke-dashoffset: 365;
 }
@@ -480,6 +556,7 @@ textarea {
   margin: 10px 0;
   color: var(--primary);
   font-size: 18px;
+  caret-color: var(--primary);
 }
 
 
@@ -581,6 +658,12 @@ select:-webkit-autofill:focus {
   transition: background-color 5000s ease-in-out 0s;
 }
 
+.built-by {
+  width: 100%;
+  text-align: center;
+  margin: 50px 0 50px 0;
+}
+
 /* *********************************************** project */
 
 .all-projects {
@@ -590,16 +673,139 @@ select:-webkit-autofill:focus {
 }
 
 .project {
-  width: 280px;
-  height: 260px;
+  width: 256px;
+  height: 196px;
   overflow: hidden;
-  margin: 0 auto;
-}
-.project img {
-  width: 100%;
-  height: 80%;
+  margin: 10px auto;
+  position: relative;
+  border: 5px solid var(--bg-color);
+  /* padding-top: 45px; */
 }
 
+.project:nth-child(2) {
+  animation-delay: 100ms;
+}
+.project:nth-child(3) {
+  animation-delay: 200ms;
+}
+.project:nth-child(4) {
+  animation-delay: 300ms;
+}
+.project:nth-child(5) {
+  animation-delay: 400ms;
+}
+.project:nth-child(6) {
+  animation-delay: 500ms;
+}
+.project:nth-child(7) {
+  animation-delay: 600ms;
+}
+
+.project:hover .project-up {
+  top: 15px;
+  background: var(--menu-color);
+}
+
+.project:hover .project-up-octagon {
+  width: 150%;
+  background: var(--menu-color);
+}
+
+.project:hover .project-up-octagon:before {
+  width: 70px;
+  top: 10px;
+}
+
+.project:hover .project-title,
+.project:hover .info-button {
+  animation: fade-enter-anim 300ms forwards ease-out;
+}
+
+
+
+.project img {
+  width: 100%;
+  height: 100%;
+}
+
+.project-up {
+  position: absolute;
+  top: 100%;
+  padding-top: 10px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  background: var(--bg-dark);
+  z-index: 1;
+  transition: 500ms;
+}
+
+.project-up-octagon {
+  position: absolute;
+  top: 5px;
+  transform: translateY(-100%);
+  height: 20px;
+  width: 60%;
+  background: var(--bg-dark);
+  clip-path: polygon(15% 0, 85% 0, 100% 100%, 0% 100%);
+  text-align: center;
+  padding-top: 4px;
+  transition: 700ms;
+
+}
+
+.project-up-octagon:before {
+  content: '';
+  width: 40px;
+  height: 2px;
+  position: absolute;
+  top: 7px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: var(--heading);
+  border-radius: 1px;
+  transition: 700ms;
+}
+
+.project-title {
+  width: 100%;
+  text-align: center;
+  height: 30px;
+  font-family: 'Montserat', sans-serif;
+  font-weight: bold;
+  font-size: 18px;
+  text-transform: capitalize;
+  z-index: 3;
+  color: var(--primary);
+  position: relative;
+  opacity: 0;
+  transform: translateY(20px);
+}
+
+.info-button {
+  font-size: 18px;
+  font-family: 'Montserat', sans-serif;
+  text-transform: capitalize;
+  font-weight: bold;
+  color: var(--primary);
+  padding: 3px 20px;
+  background: var(--heading);
+  border: none;
+  position: relative;
+  top: 10px;
+  opacity: 0;
+  transition-delay: 500ms;
+}
+
+.project-title  span {
+  /* background: url('./img/text.png');
+  background-position: center top;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
+}
 .project-modul {
   position: fixed;
   top: 50%;
@@ -682,10 +888,9 @@ button svg {
   z-index: 2;
 }
 
-.box1, .box2, .box3,
-.box4, .box5, .box6 {
+.box1, .box2, .box3 {
   width: 350px;
-  height: 300px;
+  height: 100%;
   position: absolute;
   top: 0;
   right: 0;
@@ -839,7 +1044,6 @@ button svg {
   bottom: 10px;
   right: 10px;
   z-index: 2;
- 
 }
 
 #demo-git-buttons a {
@@ -856,6 +1060,7 @@ button svg {
   margin: 0 10px;
   transition: 0,3s;
   pointer-events: none;
+  transition: 300ms;
 }
 
 #demo-git-buttons a:hover svg {
@@ -895,14 +1100,14 @@ button svg {
   nav {
     position: fixed;
     top: 0;
-    right: 0px;
-    -webkit-transform: translateX(103%);
-    transform: translateX(103%);
-    width: 300px;
-    height: 100vh;
-    background: var(--bg-dark);
+    left: 0;
+    -webkit-transform: translateY(-103%);
+    transform: translateY(-103%);
+    width: 100%;
+    height: 280px;
+    background: var(--menu-color);
     z-index: 3;
-    padding: 170px 0 200px 0;
+    padding: 20px 0;
     /* transition: transform 300ms linear; */
     will-change: transform;
   }
@@ -1018,13 +1223,60 @@ button svg {
   #modul-title {
     display: none;
   }
-
-    #modul-description {
+  #modul-description {
     text-align: start;
     margin-bottom: 30px;
   }
+  .profile-img {
+    width: 210px;
+    opacity: 0.6;
+  }
+  .profile-img img {
+    width: 100%;
+  }
+  .profile-img-border svg {
+    width: 211px;
+    height: 231px;
+  }
+
+  .profile-img-border svg rect {
+    stroke-dasharray: 610;
+    stroke-dashoffset: 455;
+    width: 100%;
+    height: 100%;
+  }
+  @keyframes anim {
+    100% {
+      stroke: var(--heading);
+      stroke-dasharray:  580;
+      stroke-dashoffset: 990;
+    }
+  }
 }
 
+/*  animations */
+
+.enter-up {
+  opacity: 0;
+  transform: translateY(20px);
+}
+
+.enter-down {
+  opacity: 0;
+  transform: translateY(-20px);
+}
+
+.fade-enter {
+  animation: fade-enter-anim 300ms forwards ease-out;
+}
+
+@keyframes fade-enter-anim {
+  100% {
+    transition: 300ms;
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 
 @media(max-width: 500px) {
   section {
@@ -1039,6 +1291,9 @@ button svg {
     top: 105%;
   }
   
+  .menu-button {
+    right: 20px;
+  }
   .page-navigation {
     right: 5px;
   }
@@ -1048,18 +1303,25 @@ button svg {
   .project-modul {
     max-width: 95%;
   }
+  .modul-close-button {
+    top: 10px;
+    right: 10px;
+  }
   .carousel {
     /* margin: 35px 25px 25px 25px; */
     width: 330px;
     height: 270px;
   }
+  
   .project-modul-info {
     width: 100%
   }
   .inner {
-    width: 300%;
-    height: 300px;
-    transform: translateX(-350px);
+    height: 275px;
+    transform: translateX(-330px);
+  }
+  .box1, .box2, .box3 {
+    width: 330px;
   }
   .project {
     width: 90%;
@@ -1071,7 +1333,6 @@ button svg {
   }
   .intro h1 {
     font-size: 30px;
-    /* width: fit-content; */
     margin: 0 auto;
     left: unset;
     text-align: center;
@@ -1100,11 +1361,14 @@ button svg {
     bottom: 30%;
     right: 10%;
   }
-  .profile-img {
-    width: 250px;
-  }
   .contact-form {
     padding: 20px 5%;
+    background: var(--bg-color);
+    box-shadow: none;
+  }
+  input,label,textarea,
+  input:focus,label:focus,textarea:focus {
+    background: var(--bg-color);
   }
   .tech-list p {
     padding: 2px 5px;
@@ -1134,7 +1398,6 @@ button svg {
     left: 50%;
     transform: translateX(-50%);
   }
-
 }
 
 @media(max-width: 370px) {
@@ -1147,12 +1410,6 @@ button svg {
   body {
     overflow-x: hidden;
   }
-  .profile-img {
-    width: 230px;
-  }
-  .profile-img img {
-    width: 100%;
-  }
   .project-modul {
     max-width: calc(100% - 4px);
     width: 100%;
@@ -1160,6 +1417,13 @@ button svg {
   .carousel {
     width: 300px;
     height: 260px
+  }
+  .inner {
+    height: 260px;
+    transform: translateX(-300px);
+  }
+  .box1, .box2, .box3 {
+    width: 300px;
   }
 }
 
