--- a/style.css
+++ b/style.css
@@ -16,23 +16,33 @@ html {
   --border-color: #bfc0bc91;
   --bg-dark: #1e2127;
   --secondary: #eeeeee;
-  --heading: #D65A31;
+  --heading: #34cceb;
+  /* --heading: #29a5ce; */
   --scrollbar: #858585;
   --scrollbar-track: #4b4a4a;
   --menu-color: #131416;
+  --carousel-nav: #21252bc4;
 }
 
-[ligth-theme="light"] {
-  --primary: #8c8f86;
-  --secondary: #b6b7b9;
-  --font: #2b2a2a;
-  --heading: #D65A31;
+[data-theme="light"] {
+  --bg-color: #bfc0bc;
+  --primary: #272c33;
+  --border-color: #13141677; 
+  --bg-dark: #b9b9b7;
+  --secondary: #3d4250;
+  --heading: #ce7329;
+  /* --heading: #29a5ce; */
+  --scrollbar: #4b4a4a;
+  --scrollbar-track: #858585;
+  --menu-color: #eeeeee;
+  --carousel-nav: #bfc0bc8f;
 }
 
 body {
   background: var(--bg-color);
   color: var(--primary);
   font-family: 'Montserrat', sans-serif;
+  /* filter: invert(100%); */
 }
 
 section {
@@ -280,7 +290,6 @@ svg line {
   opacity: 0.7;
 }
 
-
 /* ******************************************** home start */
 
 .menu-button {
@@ -374,7 +383,7 @@ nav ul li:nth-child(5) a {
 }
 
 nav ul li a span {
-  color: var(--secondary);
+  color: var(--heading);
   margin-right: 5px;
   transition: 0.3s;
 }
@@ -391,6 +400,65 @@ nav ul li a:hover {
   font-family: 'Teko', sans-serif;
   font-size: 43px;
   letter-spacing: 1px;
+}
+
+.theme-switch-wrapper {
+  position: absolute;
+  z-index: 4;
+  left: 30px;
+  top: 30px;
+  display: flex;
+  align-items: center;
+}
+.theme-switch {
+  display: inline-block;
+  height: 18px;
+  position: relative;
+  width: 36px;
+  transform: unset;
+}
+
+.theme-switch input {
+  display:none;
+}
+
+.slider {
+  background-color: var(--primary);
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: .3s;
+}
+
+.slider:before {
+  background-color: var(--bg-dark);
+  bottom: 2px;
+  content: "";
+  height: 14px;
+  left: 2px;
+  position: absolute;
+  transition: .4s;
+  width: 14px;
+}
+
+input:checked + .slider {
+  background-color: var(--primary);
+}
+
+input:checked + .slider:before {
+  transform: translateX(18px);
+  background-color: var(--bg-dark);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
 
 
@@ -432,8 +500,8 @@ nav ul li a:hover {
 }
 
 .profile-img img {
-  width: 250px;
-  opacity: 1;
+  width: 230px;
+  opacity: 0.4;
 }
 
 .profile-img .profile-img-border {
@@ -452,7 +520,7 @@ nav ul li a:hover {
   position: absolute;
   top: -1px;
   left: -1px;
-  width: 251px;
+  width: 230px;
   height: 274px;
   fill: transparent;
 }
@@ -661,7 +729,11 @@ select:-webkit-autofill:focus {
 .built-by {
   width: 100%;
   text-align: center;
-  margin: 50px 0 50px 0;
+
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  /* margin: 50px 0 50px 0; */
 }
 
 /* *********************************************** project */
@@ -678,7 +750,11 @@ select:-webkit-autofill:focus {
   overflow: hidden;
   margin: 10px auto;
   position: relative;
-  border: 5px solid var(--bg-color);
+  /* border: 5px solid var(--bg-color); */
+    -webkit-box-shadow: 10px 10px 11px -2px rgba(0,0,0,0.35);
+  -moz-box-shadow: 10px 10px 11px -2px rgba(0,0,0,0.35);
+  box-shadow: 10px 10px 11px -2px rgba(0,0,0,0.35);
+
   /* padding-top: 45px; */
 }
 
@@ -702,24 +778,20 @@ select:-webkit-autofill:focus {
 }
 
 .project:hover .project-up {
-  top: 15px;
-  background: var(--menu-color);
+  transform: translateY(10px);
 }
 
 .project:hover .project-up-octagon {
   width: 150%;
-  background: var(--menu-color);
 }
 
 .project:hover .project-up-octagon:before {
   width: 70px;
   top: 10px;
+  background: var(--heading);
 }
 
-.project:hover .project-title,
-.project:hover .info-button {
-  animation: fade-enter-anim 300ms forwards ease-out;
-}
+
 
 
 
@@ -730,31 +802,34 @@ select:-webkit-autofill:focus {
 
 .project-up {
   position: absolute;
-  top: 100%;
-  padding-top: 10px;
+  top: 0;
+  transform: translateY(100%);
+  padding-top: 30px;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: start;
   background: var(--bg-dark);
   z-index: 1;
   transition: 500ms;
+  will-change: transform;
 }
 
 .project-up-octagon {
   position: absolute;
-  top: 5px;
+  top: 0px;
   transform: translateY(-100%);
-  height: 20px;
-  width: 60%;
+  height: 10px;
+  width: 40%;
   background: var(--bg-dark);
-  clip-path: polygon(15% 0, 85% 0, 100% 100%, 0% 100%);
+  /* clip-path: polygon(15% 0, 85% 0, 100% 100%, 0% 100%); */
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   text-align: center;
   padding-top: 4px;
   transition: 700ms;
-
 }
 
 .project-up-octagon:before {
@@ -762,12 +837,13 @@ select:-webkit-autofill:focus {
   width: 40px;
   height: 2px;
   position: absolute;
-  top: 7px;
+  top: 5px;
   left: 50%;
   transform: translateX(-50%);
-  background: var(--heading);
+  background: var(--primary);
   border-radius: 1px;
   transition: 700ms;
+  will-change: width, top;
 }
 
 .project-title {
@@ -783,29 +859,69 @@ select:-webkit-autofill:focus {
   position: relative;
   opacity: 0;
   transform: translateY(20px);
+  transition: 300ms;
+  transition-delay: 200ms;
+  will-change: transform, opcacity;
 }
 
 .info-button {
-  font-size: 18px;
+  font-size: 11px;
   font-family: 'Montserat', sans-serif;
-  text-transform: capitalize;
-  font-weight: bold;
-  color: var(--primary);
-  padding: 3px 20px;
-  background: var(--heading);
+  text-transform: uppercase;
+  font-weight: 800;
+  color: var(--heading);
+  width: 102px;
+  height: 28px;
+  background: none;
   border: none;
-  position: relative;
-  top: 10px;
+  cursor: pointer;
+  transform: translateY(20px);
+  margin-top: 25px;
   opacity: 0;
-  transition-delay: 500ms;
+  transition: 300ms;
+  transition-delay: 300ms;
+  will-change: transform, opcacity;
 }
 
-.project-title  span {
-  /* background: url('./img/text.png');
-  background-position: center top;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; */
+.info-button svg,
+.info-button svg rect {
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  width: calc(100% + 8px);
+  height: calc(100% + 8px);
+  fill: transparent;
 }
+
+.info-button svg rect {
+  width: 100%;
+  height: 100%;
+  stroke: var(--heading);
+  stroke-width: 3;
+  stroke-dasharray: 141 5;
+  stroke-dashoffset: 15.5;
+  transition: 400ms ease-out;
+}
+
+.info-button:hover svg rect {
+  /* animation: info-btn-anim 300ms linear forwards; */
+    stroke-dasharray: 141 5;
+    stroke-dashoffset: 161.5;
+}
+
+@keyframes info-btn-anim {
+  100% { 
+    stroke-dasharray: 141 5;
+    stroke-dashoffset: 88.5;
+  }
+}
+
+.project:hover .project-title,
+.project:hover .info-button {
+  transform: translateY(0%);
+  opacity: 1;
+}
+
 .project-modul {
   position: fixed;
   top: 50%;
@@ -815,7 +931,8 @@ select:-webkit-autofill:focus {
   display: none;
   background: var(--bg-dark);
   padding-left: 20px;
-  border: 2px solid var(--scrollbar-track)
+  border: 2px solid var(--scrollbar-track);
+  z-index: 5;
 }
 
 /* #project-modul-layer {
@@ -830,7 +947,6 @@ select:-webkit-autofill:focus {
 
 .active-modul {
   display: flex;
-  z-index: 3;
 }
 
 .modul-close-button {
@@ -854,11 +970,16 @@ button svg {
 }
 
 .carousel {
-  width: 350px;
-  height: 300px;
+  width: 340px;
+  height: 280px;
   position: relative;
-  overflow: hidden;
   align-self: center;
+  overflow: hidden;
+}
+
+.active img:hover {
+  transition: 300ms; 
+  transform: scale(1.2);
 }
 
 .title-and-tech {
@@ -871,34 +992,25 @@ button svg {
   display: none;
 }
 
-.inner {
+.inner { 
   width: 300%;
-  height: 300px;
+  height: 250px;
   transform: translateX(-320px);
   position: relative;
 }
-.inner::before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: linear-gradient(180deg, rgba(0,0,0,0) 50%, var(--bg-color) 100%);
-  z-index: 2;
-}
+
 
 .box1, .box2, .box3 {
-  width: 350px;
+  width: 340px;
   height: 100%;
   position: absolute;
   top: 0;
   right: 0;
   will-change: transform, filter;
+  overflow: hidden;
 }
 
-.box1 img, .box2 img, .box3 img,
-.box4 img, .box5 img, .box6 img {
+.box1 img, .box2 img, .box3 img {
   width: 100%;
   height: 100%;
 }
@@ -924,15 +1036,14 @@ button svg {
 
 
 .carousel-navigation {
-  position: absolute;
-  padding: 10px 0;
+  /* position: absolute; */
+  padding-top: 5px;
   width: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  bottom: 0;
-/*   background: linear-gradient(180deg, rgba(0,0,0,0) 50%, var(--bg-dark) 100%); */
-
+  background: var(--bg-dark);
+  z-index: 4;
 }
 
 .carousel-navigation button {
@@ -968,7 +1079,7 @@ button svg {
 }
 .project-modul-info {
   width: 450px;
-  height: 350px;
+  height: 320px;
   padding: 35px 25px 25px 25px;
   color: var(--primary);
   background: var(--bg-dark);
@@ -1172,9 +1283,9 @@ button svg {
     left: 10px;
   }
   .inner {
-    width: 300%;
-    height: 300px;
-    transform: translateX(-350px);
+ /*    width: 300%;
+    height: 280px; */
+    transform: translateX(-340px);
   }
   .about .section-content {
     flex-direction: column-reverse;
@@ -1191,7 +1302,9 @@ button svg {
     max-width: 490px;
     padding: 30px 5%;
   }
-  
+  .page-background-num {
+    font-size: 26em;
+  }
   .home .page-background-num {
     bottom: 10%;
     right: 10%;
@@ -1292,7 +1405,8 @@ button svg {
   }
   
   .menu-button {
-    right: 20px;
+    top: 15px;
+    right: 10px;
   }
   .page-navigation {
     right: 5px;
@@ -1300,6 +1414,7 @@ button svg {
   .icons-home {
     left: 5px;
   }
+  
   .project-modul {
     max-width: 95%;
   }
@@ -1308,26 +1423,20 @@ button svg {
     right: 10px;
   }
   .carousel {
-    /* margin: 35px 25px 25px 25px; */
     width: 330px;
-    height: 270px;
-  }
-  
-  .project-modul-info {
-    width: 100%
+    height: 275px;
   }
   .inner {
-    height: 275px;
+    height: 245px;
     transform: translateX(-330px);
   }
   .box1, .box2, .box3 {
     width: 330px;
   }
-  .project {
-    width: 90%;
-    max-width: 260px;
-    height: 240px;
+  .project-modul-info {
+    width: 100%
   }
+
   .intro {
     padding: 0 60px 0 60px;
   }
@@ -1357,10 +1466,6 @@ button svg {
   .contact-text-and-info p {
     text-align: start;
   }
-  .home .page-background-num {
-    bottom: 30%;
-    right: 10%;
-  }
   .contact-form {
     padding: 20px 5%;
     background: var(--bg-color);
@@ -1373,12 +1478,15 @@ button svg {
   .tech-list p {
     padding: 2px 5px;
   }
+
+  .page-background-num {
+    font-size: 24em;
+  }
   .home .page-background-num {
     bottom: 20%;
     right: unset;
     left: 50%;
     transform: translateX(-50%);
-    
   }
   .about .page-background-num {
     bottom: 30%;
@@ -1405,7 +1513,9 @@ button svg {
     padding: 0 35px 0 35px;
   }
   .project {
-    width: 220px;
+    width: 100%;
+    max-width: 245px;
+    height: 200px;
   }
   body {
     overflow-x: hidden;
@@ -1419,12 +1529,17 @@ button svg {
     height: 260px
   }
   .inner {
-    height: 260px;
+    height: 230px;
     transform: translateX(-300px);
   }
   .box1, .box2, .box3 {
     width: 300px;
   }
+
+  .project-modul-info {
+    padding: 25px 10px 25px 10px;
+  }
+
 }
 
 /* link button on hover dont work */
