--- a/style.css
+++ b/style.css
@@ -1389,7 +1389,7 @@ button svg {
 
 /* *************************************** animations */
 
-.enter-up {
+.enter-up { 
   opacity: 0;
   transform: translateY(20px);
 }
@@ -1400,12 +1400,12 @@ button svg {
 }
 
 .fade-enter {
+  will-change: transform, opacity;
   animation: fade-enter-anim 300ms forwards ease-out;
 }
 
 @keyframes fade-enter-anim {
   100% {
-    /* transition: 300ms; */
     transform: translateY(0);
     opacity: 1;
   }
