--- a/style.css
+++ b/style.css
@@ -1009,8 +1009,8 @@ select:-webkit-autofill:focus {
 }
 
 .project img {
-  width: 100%;
-  height: 100%;
+  width: 256px;
+  height: 196px;
 }
 
 .project-up {
@@ -1141,16 +1141,6 @@ select:-webkit-autofill:focus {
   z-index: 5;
 }
 
-/* #project-modul-layer {
-  position: absolute;
-  top: 0;
-  left:0;
-  width: 100%;
-  height: 350px;
-  background: transparent;
-  z-index: 1;
-} */
-
 .active-modul {
   display: flex;
 }
@@ -1244,7 +1234,6 @@ button svg {
 }
 
 .carousel-navigation {
-  /* position: absolute; */
   padding-top: 5px;
   width: 100%;
   display: flex;
@@ -1297,19 +1286,19 @@ button svg {
   /* top: -50px; */
 }
 
-.project-modul-info svg {
+.project-modul .corner-svg {
   position: absolute;
   top: -4px;
   left: -4px;
   z-index: 1;
 }
-.project-modul-info svg polyline {
+.project-modul .corner-svg polyline {
   fill: none;
   stroke: var(--heading);
   stroke-width: 9;
 }
 
-.project-modul-info svg:nth-child(2) {
+.project-modul .corner-svg:nth-child(2) {
   position: absolute;
   top: unset !important;
   left: unset !important;
@@ -1716,7 +1705,7 @@ button svg {
   section {
     padding: 0 35px 0 35px;
   }
-  .project {
+  .project, .project img {
     width: 100%;
     max-width: 245px;
     height: 200px;
